[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
postcard = {version= "1.0.8",features=["alloc"] }
rsautogui = "0.2.2"
serde = "1.0.203"
tokio = "1.38.0"
winapi = { version = "0.3.9", features = ["processthreadsapi","handleapi","winerror","winreg"] }
windows-sys = "0.52.0"
shared={path="../shared"}